--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       }
 
       body {
+        height: calc(100vh - var(--title-bar-height) - 8px);
         padding-top: calc(var(--title-bar-height) - 8px);
-        background-color: red;
+        background: #c2e59c99;
+        background-image: linear-gradient(-45deg, #64b3f4e6 25%, #c2e59c 100%);
       }
 
       .title-bar {
@@ -31,7 +33,7 @@
         left: 0;
         font-size: 12px;
         padding-right: var(--window-control-width);
-        background: #e1e1e11f;
+        background: rgba(225, 225, 225, 0.05);
         color: #000;
         line-height: var(--title-bar-height);
         padding-left: 30px;
