--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       body {
         width: calc(100vw);
         height: calc(100vh);
-        background: #c2e59c99;
-        background-image: linear-gradient(-45deg, #64b3f4e6 25%, #c2e59c 100%);
+        /* background: #c2e59c99;
+        background-image: linear-gradient(-45deg, #64b3f4e6 25%, #c2e59c 100%); */
         overflow: hidden;
       }
 
@@ -148,6 +148,44 @@
       .box::after {
         content: attr(data-index);
       }
+
+      .diffuse-background {
+        position: absolute;
+        top: -100px;
+        left: -100px;
+        width: calc(100% + 200px);
+        height: calc(100% + 200px);
+        z-index: -1;
+
+        background: radial-gradient(
+            circle at 15% 50%,
+            rgba(0, 180, 180, 0.6) 0%,
+            transparent 40%
+          ),
+          radial-gradient(
+            circle at 85% 30%,
+            rgba(255, 255, 0, 0.5) 0%,
+            transparent 40%
+          ),
+          radial-gradient(
+            circle at 60% 80%,
+            rgba(255, 105, 180, 0.5) 0%,
+            transparent 40%
+          ),
+          radial-gradient(
+            circle at 30% 90%,
+            rgba(180, 100, 255, 0.4) 0%,
+            transparent 40%
+          ),
+          radial-gradient(
+            circle at 70% 10%,
+            rgba(0, 200, 255, 0.3) 0%,
+            transparent 40%
+          );
+
+        background-color: rgba(240, 240, 240, 0.5);
+        filter: blur(100px);
+      }
     </style>
   </head>
   <body>
@@ -155,6 +193,7 @@
       <img id="icon" />
       <div id="title">custom title bar</div>
     </div>
+    <div class="diffuse-background"></div>
     <main>
       <h1>💖 Hello World!</h1>
       <p>Welcome to your simple Electron application.</p>
